# hackathon-2

./: .gitignore  Chapter 1 Introduction  Chapter 3 URDF  Chapter 4 Basic Control  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  test_rag.py  tsconfig.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/chatbot/: main.py  pyproject.toml  requirements.txt
backend/chatbot/data/chapter 2/: fundamentals.md  index.md
backend/chatbot/data/chapter 4/: index.md
backend/chatbot/ebook/Chapter-1/: introduction.md
backend/chatbot/ebook/Chapter-2/: fundamentals.md  workspace.md
backend/chatbot/ebook/Chapter-3/: basic.md  xacro.md
docusaurus/docs/Chapter-2/: fundamentals.md
docusaurus/docs/Chapter-3/: basic.md
frontend/docusaurus/: package.json
frontend/docusaurus/ebook/: docusaurus.config.ts  package-lock_old.json  package.json  sidebars.ts
history/prompts/001-ros2-robot-nervous-system/: 1-create-spec-for-ros2-nervous-system-paper.spec.prompt.md  2-plan-for-ros2-nervous-system-paper.plan.prompt.md  4-generated-tasks.md-for-ros2-paper.tasks.prompt.md  5-completed-implementation-of-ros2-paper.green.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
history/prompts/general/: 3-missing-tasks.md-for-implementation.general.prompt.md
specs/001-ros2-robot-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-robot-nervous-system/checklists/: requirements.md
specs/001-ros2-robot-nervous-system/content/: module-1.md
(+30 files in other folders)
