[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.125.0",
    "google-generativeai>=0.8.6",
    "pathlib>=1.0.1",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
